@@ -924,6 +924,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>${resources.plugin}</version>
+                    <configuration>
+                        <propertiesEncoding>${project.build.resourceEncoding}</propertiesEncoding>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1530,6 +1533,9 @@
             <activation>
                 <jdk>[16,)</jdk>
             </activation>
+            <properties>
+                <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.logging/java.util.logging=ALL-UNNAMED</argLine>
+            </properties>
             <build>
                 <pluginManagement>
                     <plugins>
